[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ARLRDBD.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/player_script.gd" type="Script" id=3]
[ext_resource path="res://scenes/AmmoUI.gd" type="Script" id=4]
[ext_resource path="res://scenes/map.gd" type="Script" id=5]
[ext_resource path="res://scenes/HP.gd" type="Script" id=6]
[ext_resource path="res://scenes/Control.gd" type="Script" id=7]
[ext_resource path="res://scenes/Point.gd" type="Script" id=8]
[ext_resource path="res://scenes/Enemy spawner.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=66]

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=65]
size = 20
outline_color = Color( 0.890196, 0.262745, 0.262745, 1 )
font_data = ExtResource( 2 )

[node name="Main Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 459, 267 )
z_index = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 69 )

[node name="BulletPoint" type="Node2D" parent="Player"]
position = Vector2( 8, 0 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, 1 )
zoom = Vector2( 0.3, 0.3 )
limit_left = 253
limit_top = 69
limit_right = 797
limit_bottom = 561

[node name="Hitbox" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hitbox"]
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 66 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Countdown" type="Control" parent="CanvasLayer/UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}
seconds = 60

[node name="sec" type="RichTextLabel" parent="CanvasLayer/UI/Countdown"]
margin_left = -1.0
margin_top = 3.0
margin_right = 118.0
margin_bottom = 65.0
custom_fonts/normal_font = SubResource( 5 )
fit_content_height = true

[node name="Timer" type="Timer" parent="CanvasLayer/UI/Countdown"]
autostart = true

[node name="AmmoUI" type="Control" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 36.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ammocount" type="RichTextLabel" parent="CanvasLayer/UI/AmmoUI"]
anchor_left = -2.275
margin_left = 918.0
margin_right = 1023.0
margin_bottom = 42.0
custom_fonts/normal_font = SubResource( 65 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HP" type="Control" parent="CanvasLayer/UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="HPbar" type="RichTextLabel" parent="CanvasLayer/UI/HP"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 893.0
margin_top = 43.0
margin_right = 983.0
margin_bottom = 85.0

[node name="Point" type="Control" parent="CanvasLayer/UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="Counter" type="RichTextLabel" parent="CanvasLayer/UI/Point"]
margin_top = 93.0
margin_right = 118.0
margin_bottom = 130.0

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Node2D"]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="Player/Hitbox" to="Player" method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Player/Hitbox" to="Player" method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="CanvasLayer/UI/Countdown/Timer" to="CanvasLayer/UI/Countdown" method="_on_Timer_timeout"]
[connection signal="timeout" from="Node2D/Timer" to="Node2D" method="_on_Timer_timeout"]
